Added caption to first picture

--- a/Latex/ReportAG.tex
+++ b/Latex/ReportAG.tex
@@ -73,7 +73,10 @@
 \section{Introduction and Objective}
 
 \begin{center}
+\begin{figure}
 \includegraphics[scale=0.4]{chain3Dexample}
+\caption{Final three dimensional simulation with the trace and a star showing the goal position.}
+\end{figure}
 \end{center}
  
 In this project we explore the application of inverse kinematics in three-dimensional space. First, we construct a simple composite object which contains long rigid parts that are connected so as to allow flexibility of movement. The joints connecting the rigid rods are restricted and can either rotate in plane and act like simple hinges. Second, the method of inverse kinematics is explored in order to determine the configuration of the object, i.e. the relevant angles of the joints, when the object is given a task. The method works by planning the motion towards a goal, which is a point in three-dimensional space subject to constraints. Finally, the movement of the object is animated, and a number of non-physical (?) parameters are adjusted to deliver a visually appealing performance. \\
