Some more latex

--- a/Latex/ReportAG.tex
+++ b/Latex/ReportAG.tex
@@ -269,5 +269,9 @@ We explored the possibilities in matlab, and, if time permits, we would implemen
 \end{itemize}
 \end{enumerate}
 %----------------------------------------------------------------------------------------
+\nocite{Fedor2003}
+\nocite{Welman1993}
+\bibliography{ReportAG}{}
+\bibliographystyle{plain}
 
 \end{document}
