--- a/Latex/ReportAG.tex
+++ b/Latex/ReportAG.tex
@@ -137,18 +137,48 @@ The goal of the inverse kinematics problem is to compute the vector of joint ang
 \params = f^{-1}(\vect{E})
 \end{equation}
 
-To solve this we define the Jacobian
+To solve this using the Jacobian method, first we define the Jacobian matrix as the matrix of partial derivatives
 
 \begin{equation}
 J = \left[
 \begin{array}{cccc}
-\frac{\dn{E_1}}{\dn{x}} & \frac{\dn{E_2}}{\dn{x}} & ... & \frac{\dn{E_2}}{\dn{x}} \\
-\\
-\frac{\dn{E_1}}{\dn{x}} & \frac{\dn{E_2}}{\dn{x}} & ... & \frac{\dn{E_2}}{\dn{x}} \\
+\frac{\dn{E_1}}{\dn{x}} & \frac{\dn{E_2}}{\dn{x}} & ... & \frac{\dn{E_N}}{\dn{x}} 
+\\[0.2cm]
+\frac{\dn{E_1}}{\dn{y}} & \frac{\dn{E_2}}{\dn{y}} & ... & \frac{\dn{E_N}}{\dn{y}} 
+\\[0.2cm]
+\frac{\dn{E_1}}{\dn{z}} & \frac{\dn{E_2}}{\dn{z}} & ... & \frac{\dn{E_N}}{\dn{z}}
 \end{array}
 \right]
 \end{equation}
 
+There are a number of ways to compute the Jacobian, and one common way of evaluating it is to use the cross product of the axis of rotation (which for a 2D system is simply the z axis out of screen) with the vector of the joint to goal position. However we opt for a simple central difference approximation of the partial derivatives, which we found actually worked much better.
+
+\begin{equation}
+\frac{\dn{f}}{\dn{x}} \approx \frac{f(x+\delta) - f(x-\delta)}{2\delta} 
+\end{equation}
+ 
+Inverting the Jacobian matrix is an expensive operation. Since the matrix is often not square, the pseudo inverse can be implemented
+
+\begin{equation}
+J^+ = (J^TJ)^{-1}J^T
+\end{equation}
+
+However, another approach is to simply take the transpose of the Jacobian matrix. Although this method is less accurate than taking the inverse, the main great advantage of this method is that the problem of matrix singularities is avoided, since no matrix inversion is required. Taking the transpose is also much faster to compute than taking the inverse, so it is also advantageous for real-time interactive applications such as this. \\
+
+Once we have the inverse or transpose of the Jacobian, we can compute the required change in the angles
+
+\begin{equation}
+\partial \params = J^{-1} \partial E
+\end{equation}
+
+And perform a simple Euler integration to obtain the joint angles at the next time step $\Delta t$
+
+\begin{equation}
+\params^{t+\Delta t} = \params^t + \Delta t \partial \params
+\end{equation}
+
+We must ensure the time step is sufficiently small to avoid numerical integration errors.
+ 
 \subsection{ Port the code to C++, OpenGL}
 Our software was built on top of OpenGL version 4.3 so we can adopt the shaders introduced after 3.3 version, which uses a flexible pipeline. The following libraries are employed: GLFW for window managing, GLM  for including the matrix operations and matrix-vector data types, Boost provides smart pointers (which simplify memory management), GLEW which efficiently check which OpenGL extensions are supported on the platform that is used. The C++11 standard is used as it introduces better default thread and mutex libraries as well as other improvements. \\
 
